# ChangeLog for dev-ruby/amatch
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/amatch/ChangeLog,v 1.2 2005/10/27 20:43:39 hansmi Exp $

  27 Oct 2005; Michael Hanselmann <hansmi@gentoo.org> amatch-0.2.1.ebuild:
  Added to ~ppc.

*amatch-0.2.1 (27 Oct 2005)

  27 Oct 2005; Rene Nussbaumer <killerfox@gentoo.org> +metadata.xml,
  +amatch-0.2.1.ebuild:
  Initial import. ebuild written by myself.
