@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 MD5 23e169935964d1df23e10a2c8777ab21 ChangeLog 556
 RMD160 b05125f31da44c4310123d2efc766480b9dc63fc ChangeLog 556
 SHA256 dca5ca7c9a32ff7a5004f9fecf3b4cdacca26b1b30558744837cfc7a0e2258e1 ChangeLog 556
@@ -10,3 +13,10 @@ SHA256 b824b9eaa5c40799c83a3608a0fd24fa55d67e5e1d9e3ad415c254c813d3e5c2 files/di
 MD5 11f7061118539b2d58b8e49187fbe89e metadata.xml 225
 RMD160 6352b54451ceb4cfb283cdaa7cfc72d24419b24f metadata.xml 225
 SHA256 76cebe6790362109f1f06c73888ea483ca2fdc6066ba865d6284b4c8d2375b17 metadata.xml 225
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.2.1 (GNU/Linux)
+
+iD8DBQFEK07RJrHF4yAQTrARAi1XAJ9E9+F+YCgHdfWbgG7CdIpkKO/QzgCZAQ9q
+gVpBNjymO5c/AeEFL6hG/wM=
+=ezBA
+-----END PGP SIGNATURE-----
