@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/amatch/Attic/amatch-0.2.1.ebuild,v 1.2 2005/10/27 20:43:39 hansmi Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/amatch/Attic/amatch-0.2.1.ebuild,v 1.3 2006/03/30 03:21:44 agriffis Exp $
 
 inherit ruby
 
@@ -12,7 +12,7 @@ SRC_URI="http://rubyforge.org/frs/download.php/6031/${P}.tgz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~hppa ~ppc ~x86"
+KEYWORDS="~hppa ~ia64 ~ppc ~x86"
 IUSE=""
 
 DEPEND="virtual/ruby"
