@@ -1,6 +1,18 @@
-MD5 9d3952e088cb91d0d570d18822454727 ChangeLog 461
-MD5 cb8f06905c3021613b1bcc28da69b64a daemons-0.4.2.ebuild 465
-MD5 b8af12900ec1675df295bf51013bf542 daemons-0.4.3.ebuild 460
+MD5 dc1cdac82919f826084018b04dfabf7d ChangeLog 586
+RMD160 f908adc80bad45df6b68aa816795e577d8d766e7 ChangeLog 586
+SHA256 0489cce68c67279328e87445a93a18294e0cb9799aee0fda9c5c54c0af98fab0 ChangeLog 586
+MD5 749730f9cade0a4c18357e402dbc135a daemons-0.4.2.ebuild 469
+RMD160 3aedfa73fc868f4f2f7a4bc0cb88ed969bfb9c94 daemons-0.4.2.ebuild 469
+SHA256 7b7a8dfa6386c769ad03c942172eb208f5797e4e8c375a410e0c5431c69cb97b daemons-0.4.2.ebuild 469
+MD5 a715a596cc7fa8892c0229cc5951dcef daemons-0.4.3.ebuild 469
+RMD160 79ad5c6ff497db963efb627fc6dd1062bf50687c daemons-0.4.3.ebuild 469
+SHA256 0518775b2c577c06d34d180452b50939351750689bae64c5fb895942ccbb5069 daemons-0.4.3.ebuild 469
 MD5 642dcb82e88c80f6f42a77789e8ae585 files/digest-daemons-0.4.2 61
+RMD160 5d8e096701ea34163cfd073e08213282c8af48dd files/digest-daemons-0.4.2 61
+SHA256 9bb92f82efa13ff8b060b499ba7007d85bd2a2812262580e919e028984d747c0 files/digest-daemons-0.4.2 61
 MD5 8ac8d90090d109cb8fe9121ad2d8aad4 files/digest-daemons-0.4.3 61
+RMD160 cc868b8907c36d1a2151d16f9810515817f006a5 files/digest-daemons-0.4.3 61
+SHA256 5e0308ecfe3d6b968c327efa00ca48fcc1778a516d9586347cf2424bfb83538f files/digest-daemons-0.4.3 61
 MD5 b522b82d2c47bc548a6607f0f577ab5e metadata.xml 158
+RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 metadata.xml 158
+SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032 metadata.xml 158
