@@ -1,4 +1,12 @@
-MD5 1d201f25557d4033e1b5af8246c4e749 ChangeLog 806
-MD5 0cad15413b438c10239f4395f9aceb4c diff-0.4.ebuild 683
-MD5 3eec9f3fe48b51f49dbc1f171a3b026f metadata.xml 157
+MD5 b99784a6fd3e6524a95a8f8b2b257f36 ChangeLog 894
+RMD160 a4a95d123b195ae6c60ec85cb2565e62dc909c21 ChangeLog 894
+SHA256 d93eef3ce088e6b8321e461eff0e9f0ed8bc6aeaf78af0d98a821eebafd0d6e7 ChangeLog 894
+MD5 d0c62fcb353988599e1010a4a01aeb6b diff-0.4.ebuild 692
+RMD160 43784a64b738367c87a5de91a8398377c4d5644c diff-0.4.ebuild 692
+SHA256 35ff45654b8d942609b77d418805c360dc29a3180b76fa5d922fd25d8ceebeb8 diff-0.4.ebuild 692
 MD5 4c7ed36f8fea15471a2399e4a107be1c files/digest-diff-0.4 59
+RMD160 a33dc771c867191e79c82b99b3ad64a1786c4352 files/digest-diff-0.4 59
+SHA256 b3b7f4069a318f9ec2fb407afc486c8692d45486f877c8f7c83dc8f341be27fa files/digest-diff-0.4 59
+MD5 3eec9f3fe48b51f49dbc1f171a3b026f metadata.xml 157
+RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 metadata.xml 157
+SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c metadata.xml 157
