@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/amatch
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/amatch/ChangeLog,v 1.2 2005/10/27 20:43:39 hansmi Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/amatch/ChangeLog,v 1.3 2006/03/30 03:21:44 agriffis Exp $
+
+  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> amatch-0.2.1.ebuild:
+  Mark 0.2.1 ~ia64
 
   27 Oct 2005; Michael Hanselmann <hansmi@gentoo.org> amatch-0.2.1.ebuild:
   Added to ~ppc.
